--- a/frontend/app/views/site/_footer.html.erb
+++ b/frontend/app/views/site/_footer.html.erb
@@ -1,7 +1,7 @@
 <div class="container footer">
    <div class="row-fluid">
       <div class="span12">
-         <p>&#169; <%= Date.today.year %> <a href="http://archivesspace.org">ArchivesSpace</p>
+         <p>Visit <a href="http://archivesspace.org">ArchivesSpace.org</a></p>
       </div>
    </div>
 </div>
