--- a/frontend/app/views/welcome/index.html.erb
+++ b/frontend/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
    <% end %>
 
    <div class="span12">
-      <h1>Welcome to ArchivesSpace</h1>
-      <p>This is where something will go.</p>
+      <h1><%= I18n.t "welcome.heading" %></h1>
+      <p><%= I18n.t "welcome.message" %></p>
    </div>
 </div>
