--- a/frontend/app/views/accessions/_sidebar.html.erb
+++ b/frontend/app/views/accessions/_sidebar.html.erb
@@ -1,38 +1,38 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
-    <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#basic_information"><%= I18n.t "accession._html.section.basic_information" %> <span class="icon-chevron-right"></span></a></li>
 
     <% if controller.action_name != "show" || @accession.extents.length > 0 %>
-      <li><a href="#accession_extents_">Extents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_extents_"><%= I18n.t "extent._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @accession.dates.length > 0 %>
-      <li><a href="#accession_dates_">Dates <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_dates_"><%= I18n.t "extent._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @accession.linked_agents.length > 0 %>
-      <li><a href="#accession_linked_agents_">Agent Links <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_linked_agents_"><%= I18n.t "linked_agent._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if controller.action_name != "show" || @accession.subjects.length > 0 %>
-      <li><a href="#accession_subjects_">Subjects <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_subjects_"><%= I18n.t "subject._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @accession.external_documents.length > 0 %>
-      <li><a href="#accession_external_documents_">External Documents <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_external_documents_"><%= I18n.t "external_document._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @accession.rights_statements.length > 0 %>
-      <li><a href="#accession_rights_statements_">Rights Statements <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_rights_statements_"><%= I18n.t "rights_statement._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" or @accession.deaccessions.length > 0 %>
-      <li><a href="#accession_deaccessions_">Deaccessions <span class="icon-chevron-right"></span></a></li>
+      <li><a href="#accession_deaccessions_"><%= I18n.t "deaccession._html.plural" %> <span class="icon-chevron-right"></span></a></li>
     <% end %>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
-        <button type="submit" class="btn btn-primary">Save Accession</button>
+        <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t "accession._html.singular" %></button>
       </li>
     <% end %>
   </ul>
