--- a/frontend/app/views/shared/_header_user.html.erb
+++ b/frontend/app/views/shared/_header_user.html.erb
@@ -4,24 +4,24 @@
         <span class="user-label"><span class="icon-user"></span> <%= session[:user] %></span>
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="#"><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Logout", :controller => "session",:action => "logout"%></li>
+            <li><%= link_to I18n.t("navbar.logout"), :controller => "session",:action => "logout"%></li>
           </ul>
      </div>
   </li>
 <% else %>
   <li class="dropdown">
-    <a class="session-actions dropdown-toggle" href="#" data-toggle="dropdown">Sign In</a>
+    <a class="session-actions dropdown-toggle" href="#" data-toggle="dropdown"><%= I18n.t("navbar.login") %></a>
     <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
        <%= form_tag({:controller => "session",:action => "login"}, :method => "post", :class => "login") do %>
          <div class="control-group">
-            <p class="help-inline login-message">Login attempt failed</p>
-            <p class="alert alert-success">Login Successful. Redirecting...</p>
+            <p class="help-inline login-message"><%= I18n.t "navbar.login_fail" %></p>
+            <p class="alert alert-success"><%= I18n.t "navbar.login_success" %>.</p>
             <input id="user_username" type="text" name="username" size="30" placeholder="Username" />
             <input id="user_password" type="password" name="password" size="30" placeholder="Password" />
          </div>
-         <input class="btn btn-primary" type="submit" name="commit" value="Sign In" id="login" />
+         <input class="btn btn-primary" type="submit" name="commit" value="<%= I18n.t("navbar.login") %>" id="login" />
        <% end %>
-       <p>Need an account?  <%= link_to "Register now", {:controller => "users", :action => "new"}, :class => "boring-link" %></p>
+       <p><%= I18n.t "navbar.register_prefix" %> <%= link_to I18n.t("navbar.register"), {:controller => "users", :action => "new"}, :class => "boring-link" %></p>
     </div>
   </li>
 <% end %>
