--- a/frontend/app/views/shared/_pagination_summary.html.erb
+++ b/frontend/app/views/shared/_pagination_summary.html.erb
@@ -1,5 +1,5 @@
 <% if @search_data %>
   <div class="pull-left">
-    Showing <strong><%= @search_data["offset_first"] %></strong> - <strong><%= @search_data["offset_last"] %></strong> of <strong><%= @search_data["total_hits"] %></strong> Results
+    <%= I18n.t "pagination.summary_prefix" %> <strong><%= @search_data["offset_first"] %></strong> <%= I18n.t "pagination.summary_offset_connector" %> <strong><%= @search_data["offset_last"] %></strong> <%= I18n.t "pagination.summary_total_connector" %> <strong><%= @search_data["total_hits"] %></strong> <%= I18n.t "pagination.summary_suffix" %>
   </div>
 <% end %>
