--- a/frontend/app/views/agents/_linker.html.erb
+++ b/frontend/app/views/agents/_linker.html.erb
@@ -8,13 +8,13 @@
    end
 %>
 <div class="control-group">
-  <label class="control-label">Agent</label>
+  <label class="control-label"><%= I18n.t("agent._html.singular") %></label>
   <div class="controls">
     <div class="input-append linker-wrapper">
       <input type="text" class="linker"
              id="<%= form.id_for("ref") %>"
-             data-label="Agent"
-             data-label_plural="Agents"
+             data-label="<%= I18n.t("agent._html.singular") %>"
+             data-label_plural="<%= I18n.t("agent._html.plural") %>"
              data-name="ref"
              data-path="<%= form.path %>"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
@@ -26,14 +26,14 @@
       <div class="btn-group pull-right">
         <a class="btn dropdown-toggle last" data-toggle="dropdown" href="javascript:void(0);"><span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="javascript:void(0);" class="linker-browse-btn">Browse</a></li>
+          <li><a href="javascript:void(0);" class="linker-browse-btn"><%= I18n.t("actions.browse") %></a></li>
           <li class="dropdown-submenu pull-left">
-            <a href="javascript:void(0);">Create</a>
+            <a href="javascript:void(0);"><%= I18n.t("create") %></a>
             <ul class="dropdown-menu">
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_person, :inline => true %>" class="linker-create-btn">Person</a></li>
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_family, :inline => true %>" class="linker-create-btn">Family</a></li>
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_corporate_entity, :inline => true %>" class="linker-create-btn">Corporate Entity</a></li>
-              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_software, :inline => true %>" class="linker-create-btn">Software</a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_person, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_person._html.singular") %></a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_family, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_family._html.singular") %></a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_corporate_entity, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_corporate_entity._html.singular") %></a></li>
+              <li><a href="javascript:void(0);" data-target="<%= url_for :controller => :agents, :action => :new, :type => :agent_software, :inline => true %>" class="linker-create-btn"><%= I18n.t("agent_software._html.singular") %></a></li>
             </ul>
           </li>
         </ul>
