--- a/frontend/app/views/agents/index.html.erb
+++ b/frontend/app/views/agents/index.html.erb
@@ -9,15 +9,15 @@
         <div class="btn-group">
           <% if user_can?('update_repository') %>
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-              Create Agent
+              <%= I18n.t("actions.create") %> <%= I18n.t("agent._html.singular") %>
               <span class="caret"></span>
             </a>
           <% end %>
           <ul class="dropdown-menu">
-            <li><%= link_to "Person", :controller => :agents, :action => :new, :type => :agent_person %></li>
-            <li><%= link_to "Family", :controller => :agents, :action => :new, :type => :agent_family %></li>
-            <li><%= link_to "Corporate Entity", :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
-            <li><%= link_to "Software", :controller => :agents, :action => :new, :type => :agent_software %></li>
+            <li><%= link_to I18n.t("agent_person._html.singular"), :controller => :agents, :action => :new, :type => :agent_person %></li>
+            <li><%= link_to I18n.t("agent_family._html.singular"), :controller => :agents, :action => :new, :type => :agent_family %></li>
+            <li><%= link_to I18n.t("agent_corporate_entity._html.singular"), :controller => :agents, :action => :new, :type => :agent_corporate_entity %></li>
+            <li><%= link_to I18n.t("agent_software._html.singular"), :controller => :agents, :action => :new, :type => :agent_software %></li>
           </ul>
         </div>
       </div>
@@ -28,8 +28,8 @@
        <table class="table table-striped table-bordered table-condensed">
          <thead>
            <tr>
-             <th>Sort Name</th>
-             <th>Type</th>
+             <th><%= I18n.t("agent_name.sort_name") %></th>
+             <th><%= I18n.t("agent.type") %></th>
              <th width="70px"><!-- actions --></th>
            </tr>
          </thead>
@@ -41,9 +41,9 @@
               <td>
                  <div class="btn-group" style="float: right">
                    <% if user_can?('update_repository') %>
-                     <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
+                     <%= link_to I18n.t("actions.edit"), {:controller => :agents, :action => :edit, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
                    <% end %>
-                   <%= link_to "View", {:controller => :agents, :action => :show, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
+                   <%= link_to I18n.t("actions.view"), {:controller => :agents, :action => :show, :id => agent.id, :type => agent.agent_type}, :class => "btn btn-mini" %>
                  </div>
               </td>
             </tr>
@@ -52,7 +52,7 @@
        </table>
       <% else %>
          <p class="alert alert-info">
-            No Agents.
+            <%= I18n.t("search_results.no_results") %>
          </p>
       <% end %>
    </div>
