--- a/frontend/app/views/agents/new.html.erb
+++ b/frontend/app/views/agents/new.html.erb
@@ -1,4 +1,4 @@
-<%= setup_context :object => @agent, :controller => :agents,  :type => @agent.agent_type, :title => "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>
+<%= setup_context :object => @agent, :controller => :agents,  :type => @agent.agent_type, :title => "#{I18n.t("actions.new_prefix")} #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>
 
 <%= form_for @agent, :as => "agent", :url => {:action => :create}, :html => {:class => 'form-horizontal', :id => "agent_form"} do |f| %>
   <%= form_context :agent, @agent.to_hash(true) do |form| %>
@@ -7,14 +7,14 @@
         <%= render :partial => "sidebar", :locals => {:form => form} %>
       </div>
       <div class="span9 record-pane">
-        <h2><%= "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>  <span class="label label-info">Agent</span></h2>
+        <h2><%= "New #{I18n.t("agent.agent_type.#{@agent.agent_type}")}" %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
         <%= render :partial => "agents/form", :locals => {:form => form} %>
         <div class="form-actions">
           <div class="btn-group">
-            <button type="submit" class="btn btn-primary">Save <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
-            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary">+1</button>
+            <button type="submit" class="btn btn-primary"><%= I18n.t "actions.save_prefix" %> <%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></button>
+            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
           </div>
-          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
         </div>
       </div>
     </div>
