--- a/frontend/app/views/agents/show.html.erb
+++ b/frontend/app/views/agents/show.html.erb
@@ -9,18 +9,18 @@
 
        <div class="btn-group" style="float: right">
          <% if user_can?('update_repository') %>
-           <%= link_to "Edit", {:controller => :agents, :action => :edit, :id => @agent.id, :type => @agent.agent_type}, :class => "btn btn-small" %>
+           <%= link_to I18n.t("actions.edit"), {:controller => :agents, :action => :edit, :id => @agent.id, :type => @agent.agent_type}, :class => "btn btn-small" %>
          <% end %>
        </div>
 
-        <h2><%= @agent.names[0]['sort_name'] %>  <span class="label label-info">Agent</span></h2>
+        <h2><%= @agent.names[0]['sort_name'] %>  <span class="label label-info"><%= I18n.t("agent._html.singular") %></span></h2>
 
         <div class="row-fluid">
           <section id="agent_details">
-            <h3>Agent Details</h3>
+            <h3><%= I18n.t("agent._html.section.basic_information") %></h3>
 
             <div class="control-group">
-               <div class="control-label">Type</div>
+               <div class="control-label"><%= I18n.t("agent.type") %></div>
                <div class="controls label-only"><%= I18n.t("agent.agent_type.#{@agent.agent_type}") %></div>
             </div>
           </section>
@@ -28,7 +28,7 @@
 
         <div class="row-fluid">
           <section id="primary_name">
-            <h3>Names</h3>
+            <h3><%= I18n.t("agent_name._html.plural") %></h3>
             <div class="accordion details" id="agent_name_accordion">
               <% @agent.names.each_with_index do | name, index | %>
                 <div class="accordion-group">
@@ -56,7 +56,7 @@
         <% if @agent.agent_contacts.length > 0 %>
           <div class="row-fluid">
             <section id="contacts">
-              <h3>Contact Details</h3>
+              <h3><%= I18n.t("agent_contact_details._html.plural") %></h3>
               <div class="accordion details" id="agent_contact_accordion">
                 <% @agent.agent_contacts.each_with_index do | contact, index | %>
                   <div class="accordion-group">
