--- a/frontend/app/views/archival_objects/_show_inline.html.erb
+++ b/frontend/app/views/archival_objects/_show_inline.html.erb
@@ -8,14 +8,14 @@
       <div class="btn-group" style="float: right">
          <% if @resource_id %>
             <% if user_can?('update_repository') %>
-              <%= link_to "Edit", {:controller => :resources, :action => :edit, :id => @resource_id, :anchor => "archival_object_#{@archival_object.id}"}, :class => "btn btn-small" %>
+              <%= link_to I18n.t("actions.edit"), {:controller => :resources, :action => :edit, :id => @resource_id, :anchor => "archival_object_#{@archival_object.id}"}, :class => "btn btn-small" %>
             <% end %>
          <% end %>
       </div>
 
-      <h2><%= @archival_object.title %> <span class="label label-info">Archival Object</span></h2>
+      <h2><%= @archival_object.title %> <span class="label label-info"><%= I18n.t("archival_object._html.singular") %></span></h2>
       <section id="basic_information">
-        <h3>Basic Information</h3>
+        <h3><%= I18n.t("archival_object._html.section.basic_information") %></h3>
         <%= readonly.label_and_textfield "title" %>
         <%= readonly.label_with_field "ref_id", "<div class='identifier-display'><div class='identifier-display-part'>#{readonly["ref_id"]}</div></div>" %>
         <%= readonly.label_and_select "level", readonly.possible_options_for("level", true) %>
