--- a/frontend/app/views/collection_management_records/_record_linker.html.erb
+++ b/frontend/app/views/collection_management_records/_record_linker.html.erb
@@ -8,13 +8,13 @@
    end
 %>
 <div class="control-group">
-  <label class="control-label">Record</label>
+  <label class="control-label"><%= I18n.t("linked_record.ref") %></label>
   <div class="controls">
     <div class="linker-wrapper">
       <input type="text" class="linker"
              id="<%= form.id_for("ref") %>"
-             data-label="Records"
-             data-label_plural="Records"
+             data-label="<%= I18n.t("linked_record.ref") %>"
+             data-label_plural="<%= I18n.t("linked_record.ref_plural") %>"
              data-name="ref"
              data-path="<%= form.path %>"
              data-url="<%= url_for :controller => :search, :action => :do_search, :format => :json %>"
