--- a/frontend/app/views/collection_management_records/_sidebar.html.erb
+++ b/frontend/app/views/collection_management_records/_sidebar.html.erb
@@ -1,14 +1,14 @@
 <div id="archivesSpaceSidebar">
   <ul class="nav nav-list as-nav-list">
-    <li><a href="#basic_information">Basic Information <span class="icon-chevron-right"></span></a></li>
-    <li><a href="#collection_management_linked_records_">Record Links <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#basic_information"><%= I18n.t("collection_management_record._html.section.basic_information") %> <span class="icon-chevron-right"></span></a></li>
+    <li><a href="#collection_management_linked_records_"><%= I18n.t("linked_record._html.plural") %> <span class="icon-chevron-right"></span></a></li>
 
     <% if not controller.action_name === "show" %>
       <li class="form-actions">
         <div class="btn-group <% if ["new", "create"].include?(controller.action_name) %>btn-submit-group<% end %>">
-          <button type="submit" class="btn btn-primary">Save Collection Management Record</button>
+          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("collection_management_record._html.singular") %></button>
           <% if ["new", "create"].include?(controller.action_name) %>
-            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary">+1</button>
+            <button type="submit" id="createPlusOne" name="plus_one" class="btn btn-primary"><%= I18n.t("actions.save_plus_one") %></button>
           <% end %>
         </div>
       </li>
