--- a/frontend/app/views/collection_management_records/edit.html.erb
+++ b/frontend/app/views/collection_management_records/edit.html.erb
@@ -14,13 +14,12 @@
         <%= render :partial => "sidebar" %>
       </div>
       <div class="span9 record-pane">
-        <h2>Processing <%= title %> <span
-class="label label-info">Collection Management Record</span></h2>
+        <h2><%= I18n.t("collection_management_record._html.title_prefix") %> <%= title %> <span class="label label-info"><%= I18n.t("collection_management_record._html.singular") %></span></h2>
 
         <%= render :partial => "collection_management_records/form", :locals => {:form => form} %>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save Collection Management Record</button>
-          <%= link_to "Cancel", :back, :class => "btn btn-cancel" %>
+          <button type="submit" class="btn btn-primary"><%= I18n.t("actions.save_prefix") %> <%= I18n.t("collection_management_record._html.singular") %></button>
+          <%= link_to I18n.t("actions.cancel"), :back, :class => "btn btn-cancel" %>
         </div>
       </div>
     </div>
