--- a/frontend/app/views/collection_management_records/index.html.erb
+++ b/frontend/app/views/collection_management_records/index.html.erb
@@ -7,19 +7,19 @@
    <div class="span9 record-pane">
       <div class="btn-group">
         <% if user_can?('update_repository') %>
-          <%= link_to "Create Collection Management Record", {:controller => :collection_management_records, :action => :new}, :class => "btn" %>
+          <%= link_to "#{I18n.t("actions.create")} #{I18n.t("collection_management_record._html.singular")}", {:controller => :collection_management_records, :action => :new}, :class => "btn" %>
         <% end %>
       </div>
-      <h2>Collection Management Records</h2>
+      <h2><%= I18n.t("collection_management_record._html.plural") %></h2>
      <% if @search_data.has_key?('results') && @search_data['results'].length  > 0 %>
          <table class="table table-striped table-bordered table-condensed">
            <thead>
              <tr>
-               <th>Identifier</th>
-               <th>Priority</th>
-               <th>Status</th>
-               <th>Processors</th>
-               <th>Processing</th>
+               <th>Id</th>
+               <th><%= I18n.t("collection_management_record.processing_priority") %></th>
+               <th><%= I18n.t("collection_management_record.processing_status") %></th>
+               <th><%= I18n.t("collection_management_record.processors") %></th>
+               <th><%= I18n.t("collection_management_record.processing_plan") %></th>
                <th width="70px"><!-- actions --></th>
              </tr>
            </thead>
@@ -39,9 +39,9 @@
                <td><%= "#{rt}: #{JSONModel(pr[:type].intern).find(pr[:id]).title}#{many_lr ? ' ...' : ''}" %></td>
                <td>
                   <div class="btn-group" style="float: right">
-                           <%= link_to "View", {:controller => :collection_management_records, :action => :show, :id => cmr.id}, :class => "btn btn-mini" %>
+                           <%= link_to I18n.t("actions.view"), {:controller => :collection_management_records, :action => :show, :id => cmr.id}, :class => "btn btn-mini" %>
                     <% if user_can?('update_repository') %>
-                      <%= link_to "Edit", {:controller => :collection_management_records, :action => :edit, :id => cmr.id}, :class => "btn btn-mini" %>
+                      <%= link_to I18n.t("actions.edit"), {:controller => :collection_management_records, :action => :edit, :id => cmr.id}, :class => "btn btn-mini" %>
                     <% end %>
                   </div>
                </td>
