--- a/frontend/app/views/collection_management_records/show.html.erb
+++ b/frontend/app/views/collection_management_records/show.html.erb
@@ -15,19 +15,19 @@
     <%= readonly_context :collection_management, @collection_management.to_hash(true) do |readonly| %>
       <% if user_can?('update_repository') %>
         <div class="btn-group" style="float: right">
-            <%= link_to "Edit", {:controller => :collection_management_records, :action => :edit, :id => @collection_management.id}, :class => "btn btn-small" %>
+            <%= link_to I18n.t("actions.edit"), {:controller => :collection_management_records, :action => :edit, :id => @collection_management.id}, :class => "btn btn-small" %>
           </div>
         <% end %>
 
-        <h2>Processing <%= title %> <span class="label label-info">Collection Management Record</span></h2>
+        <h2>Processing <%= title %> <span class="label label-info"><%= I18n.t("collection_management_record._html.singular") %></span></h2>
 
        <%= render :partial => "shared/flash_messages" %>
 
         <section id="basic_information">
-          <h3>Basic Information</h3>
+          <h3><%= I18n.t("collection_management_record._html.section.basic_information") %></h3>
 
           <div class="row-fluid label-and-value">
-             <div class="span3">Identifier</div>
+             <div class="span3">Id</div>
              <div class="span9"><%= @collection_management.id %></div>
           </div>
           <div class="row-fluid label-and-value">
@@ -78,15 +78,21 @@
           <div class="row-fluid label-and-value">
 
              <div class="span3"><%= I18n.t("collection_management.rights_determined") %></div>
-             <div class="span9"><%= @collection_management.rights_determined ? 'Yes' : 'No' %></div>
+             <div class="span9"><%= @collection_management.rights_determined ? I18n.t("collection_management.rights_determined_true") : I18n.t("collection_management.rights_determined_false") %></div>
 
           </div>
         </section>
 
         <section id="collection_management_linked_records_">
-          <h3>Record Links</h3>
+          <h3><%= I18n.t("linked_record._html.plural") %></h3>
           <div class="row-fluid label-and-value">
-             <div class="span3">Record Links</div>
+             <div class="span3">
+              <% if @collection_management.linked_records.length > 1 %>
+                <%= I18n.t("linked_record.ref_plural") %>
+              <% else %>
+                <%= I18n.t("linked_record.ref") %>
+              <% end %>
+             </div>
              <div class="span9 token-list">
                <% @collection_management.linked_records.each do | ref | %>
                 <%= render_token :object => ref["resolved"]["ref"],
