--- a/frontend/app/views/container_locations/_show.html.erb
+++ b/frontend/app/views/container_locations/_show.html.erb
@@ -1,5 +1,5 @@
 <section>
-  <h5>Locations</h5>
+  <h5><%= I18n.t("container_location._html.plural") %></h5>
 
   <div class="container-subrecord">
     <% container_locations.each_with_index do |container_location, index| %>
